[project]
name = "heimdall"
version = "0.1.0"
description = "Fast, pre-ingestion data-hygiene API to filter web noise and content farms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
